--- a/views/partials/notification.ejs
+++ b/views/partials/notification.ejs
@@ -5,8 +5,7 @@
 <%- include ('templateright.ejs') -%>
 <br />
 <div class="container">
-    <h1>a</h1>
-    <img src="<%= bitmap %>" alt="">
+    <h3><%= status%> </h3>
 </div>
 
 <%- include ('templatefooter.ejs') -%>
