--- a/views/manage/card.ejs
+++ b/views/manage/card.ejs
@@ -9,6 +9,7 @@
     <li>Tên: <%= bank.user.displayName%></li>
     <li>Tài khoản mặc định: <%= bank.accountNumber %></li>
     <form action="" method="post">
+        <input type="text"  name="content"  placeholder="Nội dung">
         <input type="number" name="money" id="" placeholder="Tiền cần nạp">
         <input type="submit" value="Nạp tiền">
     </form>
