--- a/views/manage/adminAccount.ejs
+++ b/views/manage/adminAccount.ejs
@@ -1,50 +1,75 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <title>Document</title>
-</head>
+
+
+
+ <%- include ('../partials/templateheader.ejs') -%>
+<%- include ('../partials/templateleft.ejs') -%>
+<br />
+
+<%- include ('../partials/templateright.ejs') -%>
+<br />
+<hr />
+
 <body>
-    <div class="container">
-    <h3>Quản lý tài khoản nhân viên</h3>
-    <div>
-        <form action="" method="post">
-            <input type="text" name="displayName" placeholder="Họ và tên">
-            <input type="text" name="username" placeholder="Tài khoản">
-            <input type="password" name="password" placeholder="Mật khẩu">
-            <input type="submit" value="Thêm nhân viên">
-          
-        </form>
-        <br>
-    </div>
-    <div>
-    <table class="table table-striped table-dark">
-        <thead>
-          <tr>
-            <th scope="col">Email</th>
-            <th scope="col">Họ và Tên</th>
-            <th scope="col">Thao tác</th>
-          </tr>
-        </thead>
-        <tbody>
-            <% users.forEach(function(user){ %>
-          <tr>
-            <th scope="col"><%= user.email %> </th>
-            <th scope="col"><%= user.displayName %></th>
-            <th scope="col">
-            <% if(user.block === false){ %> 
-            <a href="adminAccount/<%=user.email%>/block">Khóa account</a>
-            <% } else { %>
-            <a href="adminAccount/<%=user.email%>/unblock">Mở account</a>
-            <% }%>
-            </th>
-          </tr>
-          <% }); %>
-        </tbody>
-      </table>
-    </div>
-    </div>
+  <div class="container">
+    <br>
+  <h1 style="text-align: center;">Quản Lý Tài Khoản Nhân Viên</h1>
+  <hr>
+  </br>
+  <div>
+      <form action="" method="post">
+          <input type="text" name="displayName" placeholder="Tên Đăng Nhập"  class= "form-control actt">
+          <br>
+          <input type="text" name="username" placeholder="Tên Tài khoản" class= "form-control actt">
+          <br>
+          <input type="password" name="password" placeholder="Mật khẩu" class= "form-control actt">
+      <br>
+          <button style="margin-left:26vw;margin-right:11vw;" type="submit" id = "submit" class="btn btn-primary mb-2">Thêm Thành Viên</button>
+        
+      </form>
+      <br>
+  </div>
+  <div>
+  <table class="table table-striped table-dark">
+      <thead>
+        <hr>
+        <tr>
+          <th scope="col">Email</th>
+          <th scope="col">Họ và Tên</th>
+          <th scope="col">Thao tác</th>
+        </tr>
+      </thead>
+      <tbody>
+          <% users.forEach(function(user){ %>
+        <tr>
+          <th scope="col"><%= user.email %> </th>
+          <th scope="col"><%= user.displayName %></th>
+          <th scope="col">
+          <% if(user.block === false){ %> 
+          <a href="adminAccount/<%=user.email%>/block">Khóa account</a>
+          <% } else { %>
+          <a href="adminAccount/<%=user.email%>/unblock">Mở account</a>
+          <% }%>
+          </th>
+        </tr>
+        <% }); %>
+      </tbody>
+    </table>
+  </div>
+  </div>
 </body>
-</html>
+   
+</div>
+
+<%- include ('../partials/templatefooter.ejs') -%> 
+
+<style>
+  .actt
+  {
+    width: 50vw;
+    margin-left: auto;
+    margin-right: auto;
+
+  }
+    
+  
+</style>
