--- a/views/manage/historyRecharge.ejs
+++ b/views/manage/historyRecharge.ejs
@@ -1,46 +1,55 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <title>Document</title>
-</head>
+
+
+
+
+
+<%- include ('../partials/templateheader.ejs') -%>
+<%- include ('../partials/templateleft.ejs') -%>
+<br />
+
+<%- include ('../partials/templateright.ejs') -%>
+<br />
+<hr />
+
 <body>
 
-    <form action="" method="post">
-        <input type="text" placeholder="Số Hóa Đơn | Số tài khoản   ">
-        <input type="submit" value="Tìm Kiếm">
-        </form>
+  <form action="" method="post">
+      <input type="text" placeholder="Số Hóa Đơn | Số tài khoản   ">
+      <input type="submit" value="Tìm Kiếm">
+      </form>
 
 
-    <div class="container">
-    <h3>LỊCH SỬ NẠP TIỀN CỦA KHÁCH HÀNG</h3>
-    <table class="table table-striped table-dark">
-        <thead>
-          <tr>
-            <th scope="col">Mã hóa đơn</th>
-            <th scope="col">Số tài khoản</th>
-            <th scope="col">Họ và tên</th>
-            <th scope="col">Số tiền</th>
-            <th scope="col">Ngày giao dịch</th>
-            <th scope="col">Nội dung</th>
-          </tr>
-        </thead>
-        <tbody>
-            <% recharge.forEach(function(r){ %>
-          <tr>
-            <th scope="col"><%= r.code %></th>
-            <th scope="col"><%= r.accuontRecharge %></th>
-            <th scope="col"><%= r.nameRecharge %></th>
-            <th scope="col"><%= r.Money %></th>
-            <th scope="col"><%= r.date %></th>
-            <th scope="col"><%= r.content %></th>
-          </tr>
-          <% }); %>
-        </tbody>
-      </table>
-    </div>
-    </div>
+  <div class="container">
+    <h1 style="text-align: center;">Lịch Sử Nạp Tiền Của Khách Hàng</h1>
+    <br>
+  <table class="table table-striped table-dark">
+      <thead>
+        <tr>
+          <th scope="col">Mã hóa đơn</th>
+          <th scope="col">Số tài khoản</th>
+          <th scope="col">Họ và tên</th>
+          <th scope="col">Số tiền</th>
+          <th scope="col">Ngày giao dịch</th>
+          <th scope="col">Nội dung</th>
+        </tr>
+      </thead>
+      <tbody>
+          <% recharge.forEach(function(r){ %>
+        <tr>
+          <th scope="col"><%= r.code %></th>
+          <th scope="col"><%= r.accuontRecharge %></th>
+          <th scope="col"><%= r.nameRecharge %></th>
+          <th scope="col"><%= r.Money %></th>
+          <th scope="col"><%= r.date %></th>
+          <th scope="col"><%= r.content %></th>
+        </tr>
+        <% }); %>
+      </tbody>
+    </table>
+  </div>
+  </div>
 </body>
-</html>
+   
+</div>
+
+<%- include ('../partials/templatefooter.ejs') -%>
