--- a/views/manage/historyRecharge.ejs
+++ b/views/manage/historyRecharge.ejs
@@ -9,7 +9,7 @@
 <body>
 
     <form action="" method="post">
-        <input type="text" placeholder="Số Hóa Đơn | Số tài khoản   ">
+        <input type="text"  name = "temp" placeholder="Số Hóa Đơn | Số tài khoản   ">
         <input type="submit" value="Tìm Kiếm">
         </form>
 
