--- a/views/manage/recharge.ejs
+++ b/views/manage/recharge.ejs
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <form action="" method="post">
-        <input type="text" placeholder="Email | Số tài khoản | CMND">
+        <input type="text" name="temp" placeholder="Email | Số tài khoản | CMND">
         <input type="submit" value="Tìm Kiếm">
         </form>
 
