--- a/views/manage/adminAccount.ejs
+++ b/views/manage/adminAccount.ejs
@@ -1,11 +1,8 @@
-
-
-
- <%- include ('../partials/templateheader.ejs') -%>
-<%- include ('../partials/templateleft.ejs') -%>
+<%- include ('templateheader.ejs') -%>
+<%- include ('templateleft.ejs') -%>
 <br />
 
-<%- include ('../partials/templateright.ejs') -%>
+<%- include ('templateright.ejs') -%>
 <br />
 <hr />
 
@@ -60,7 +57,7 @@
    
 </div>
 
-<%- include ('../partials/templatefooter.ejs') -%> 
+<%- include ('templatefooter.ejs') -%> 
 
 <style>
   .actt
