--- a/views/manage/guestAccount.ejs
+++ b/views/manage/guestAccount.ejs
@@ -1,49 +1,12 @@
-
-
-
-
-
-<%- include ('../partials/templateheader.ejs') -%>
-<%- include ('../partials/templateleft.ejs') -%>
+<%- include ('templateheader.ejs') -%>
+<%- include ('templateleft.ejs') -%>
 <br />
 
-<%- include ('../partials/templateright.ejs') -%>
+<%- include ('templateright.ejs') -%>
 <br />
 <hr />
 
 <body>
-<<<<<<< HEAD
-    <div class="container">
-    <h3>Quản lý tài khoản khách hàng</h3>
-    <table class="table table-striped table-dark">
-        <thead>
-          <tr>
-            <th scope="col">Email</th>
-            <th scope="col">Tài khoản mặc định</th>
-            <th scope="col">Họ và Tên</th>
-            <th scope="col">Thao tác</th>
-          </tr>
-        </thead>
-        <tbody>
-            <% banks.forEach(function(bank){ %>
-          <tr>
-            <th scope="col"><%= bank.user.email %> </th>
-            <th scope="col"><%= bank.accountNumber %> </th>
-            <th scope="col"><%= bank.user.displayName %></th>
-            <th scope="col">
-            <% if(bank.user.block === false){ %> 
-            <a href="guestAccount/<%=bank.user.email%>/block">Khóa account</a>
-            <% } else { %>
-            <a href="guestAccount/<%=bank.user.email%>/unblock">Mở account</a>
-            <% }%>
-            </th>
-          </tr>
-          <% }); %>
-        </tbody>
-      </table>
-    </div>
-    </div>
-=======
   <div class="container">
     <br>
   <h1 style="text-align: center;">Quản Lý Tài Khoản Khách Hàng</h1>
@@ -75,9 +38,8 @@
     </table>
   </div>
   </div>
->>>>>>> 33e4636ee0a043dcddc13bef89625e4fa6338728
 </body>
    
 </div>
 
-<%- include ('../partials/templatefooter.ejs') -%>
+<%- include ('templatefooter.ejs') -%>
