--- a/views/manage/historyRecharge.ejs
+++ b/views/manage/historyRecharge.ejs
@@ -8,7 +8,7 @@
 
 <body>
   <form action="" method="post">
-    <input type="text" placeholder="Số Hóa Đơn | Số tài khoản" class="form-control acttc">
+    <input type="text" name="temp" placeholder="Số Hóa Đơn | Số tài khoản" class="form-control acttc">
     <input type="submit" value="Tìm Kiếm" class="form-control" style="float: left; width: 10vw; margin-left: 2vw;">
   </form>
   <div class="container" style="clear: both;">
