--- a/views/manage/recharge.ejs
+++ b/views/manage/recharge.ejs
@@ -11,7 +11,7 @@
   <hr>
   <div class="container">
       <form action="" method="post">
-      <input type="text" placeholder="Email | Số tài khoản | CMND"  class= "form-control actt">
+      <input type="text" name="temp" placeholder="Email | Số tài khoản | CMND"  class= "form-control actt">
       <br>
       <button style="margin-left:30vw;margin-right:11vw;" type="submit" id = "submit" class="btn btn-primary mb-2">Tìm Kiếm</button>
       </br>
