--- a/views/manage/templateleft.ejs
+++ b/views/manage/templateleft.ejs
@@ -21,9 +21,9 @@
               <ul class="flex-column pl-2 nav">
                 <li class="nav-item" style="margin-left: 30px; "><a class="nav-link py-0" href="/adminAccount"><span>Tài
                       Khoản Nhân Viên</span></a></li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   <a class="nav-link py-0" style="margin-top: 8px; margin-left: 30px;" href="card"><span>Nạp Tiền Tài
-                      Khoản</span></a>
+                      Khoản</span></a> -->
                 </li>
               </ul>
             </div>
@@ -40,7 +40,7 @@
             <a class="nav-link text-truncate" href="historyRecharge"><span class="d-none d-sm-inline">Lịch Sử Nạp Tiền</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-truncate" href="recharge"><span class="d-none d-sm-inline">Tìm Kiếm Tài Khoản</span></a>
+            <a class="nav-link text-truncate" href="recharge"><span class="d-none d-sm-inline">Nạp Tiền Tài Khoản</span></a>
           </li>
         </ul>
       </div>
