--- a/views/manage/templateheader.ejs
+++ b/views/manage/templateheader.ejs
@@ -20,7 +20,7 @@
 
 <body style="background-image: linear-gradient(to bottom right, rgb(66, 1, 1), rgb(253, 253, 253));">
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" style="font-family: Blippo, fantasy;color:  #000000;font-size: 25px; font-weight: normal;" href="adminAccount">Internet Banking </a>
+        <a class="navbar-brand" style="font-family: Blippo, fantasy;color:  #000000;margin-left: 4vw;font-size: 26px; font-weight: normal;" href="adminAccount">Internet Banking </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -29,7 +29,7 @@
       <div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item dropdown">
+                <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Tài khoản ▾</a>
                     <div class="dropdown-menu">
                       <a class="dropdown-item" href="adminAccount">Tài Khoản Nhân Viên</a>
@@ -48,13 +48,13 @@
                 </li>
                 <li class="nav-item">
                     <a href="recharge" class="nav-link">Tìm Kiếm</a>
-                </li>
+                </li> -->
                 
-                <div style="margin-left:24vw;">
-                <li>
+                <div style="margin-left:67vw;">
+                <h5>
                     <% if(currentUser) {  %><a href="/logout" class="nav-link">Đăng xuất</a>
                     <% } else { %><a href="/login" class="item -link">Login</a> <% } %>
-                </li>
+                </h5>
             </ul>
         
         </div>
