--- a/views/partials/profile.ejs
+++ b/views/partials/profile.ejs
@@ -36,10 +36,9 @@
             </div>
             <% }else { %>
               <% if(currentUser.CMND && currentUser.pictureCMND && currentUser.codeCMND == "1" ){ %>
-              <a href="/activateCMND">GỬI XÁC THỰC</a>
               <% } %>
               <% if(currentUser.CMND && currentUser.pictureCMND && currentUser.codeCMND == "2" ){ %>
-                <p>CMND không hợp lệ mời cập nh</p>
+                <p>CMND chưa đầy đủ mong bạn cập nhật lại</p>
                 <% } %>
               <div>
                 <h5 for="">CMND:
@@ -98,21 +97,28 @@
   $(".upload-button").on('click', function() {
      $(".file-upload").click();
   });
-  $("#submit").on('click',function(){
  
-    $.ajax({
-						type: 'POST',
-						data: JSON.stringify(base64),
-				        contentType: 'application/json',
-                        url: 'http://localhost:5000/profile',						
-                        success: function(base64) {
-                            console.log('success');
-                            console.log(JSON.stringify(base64));
-                        }
-                    });
-
-  });
 });
 </script>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js">  </script>
+<script>
+  $(document).ready(function(){
+    var imageCMND,displayName,CMND;
+    $("#submit").click(function(){
+      imageCMND= base64;
+      displayName=$("#displayName").val();
+      CMND=$("#CMND").val();
+      $.post("/profile",{imageCMND: imageCMND,displayName:displayName, CMND:CMND }, function(data){
+        if(data==='yes') {
+            console.log("success");
+          }
+      });
+    });
+  });
+  {a:b}
+</script>
+
+
 
 <%- include ('templatefooter.ejs') -%>
