--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -27,7 +27,7 @@
   <div class="header">
     <div class="wrapper">
       <div class="logo">
-        <a title="ShibaBank" href="#"><img src="../images/logo.png" /></a>
+        <a title="ShibaBank" href="home"><img src="../images/logo.png" /></a>
         <h1 style="font-family: Blippo, fantasy;">Ngân Hàng ShibaBank</h1>
       </div>
       <!--end .logo-->
@@ -49,7 +49,7 @@
       <div class="aside">
         <ul id="browser" class="navAside">
 
-          <li class="closed"><a href="#">Trang chủ</a></li>
+          <li class="closed"><a href="home">Trang chủ</a></li>
      
           <li class="closed"><a href="/login">Đăng Nhập</a></li>
           <li class="closed"><a href="/register">Đăng Kí</a></li>
@@ -93,7 +93,7 @@
                 <ul>
                   <!-- <li><a href="tcbaolanh.jsp" style="color:#AF1E40 !important;">Tra cứu bảo lãnh</a></li>  -->
                   <!-- <li><a href="tcbaolanh.jsp">Tra cứu bảo lãnh</a></li> -->
-                  <li><a href="#"
+                  <li><a href="/baomatthongtin.html"
                     style=" font-size: 20px;font-family: Helvetica, sans-serif !important;">Tra Cứu Bão Lãnh</a></li>
                   <!-- <li><a href="otp_orders.jsp" style="color:#AF1E40 !important;font-size: 15px;font-family: Helvetica, sans-serif !important;font-weight: bold;">Đăng ký chuyển đổi số điện thoại nhận SMS OTP từ 11 số sang 10 số</a></li> -->
                 </ul>
