--- a/views/partials/ToolRight.ejs
+++ b/views/partials/ToolRight.ejs
@@ -5,7 +5,7 @@
       <ul>
         <!-- <li><a href="tcbaolanh.jsp" style="color:#AF1E40 !important;">Tra cứu bảo lãnh</a></li>  -->
         <!-- <li><a href="tcbaolanh.jsp">Tra cứu bảo lãnh</a></li> -->
-        <li><a href="./CanhBaoGiaoDichGiaMaoDichVuNganHangDienTu.pdf"
+        <li><a href="/baomatthongtin.html"
           style="color:#AF1E40 !important;font-size: 20px;font-family: Helvetica, sans-serif !important;">Tra Cứu Bão Lãnh
           </a></li>
         <!-- <li><a href="otp_orders.jsp" style="color:#AF1E40 !important;font-size: 15px;font-family: Helvetica, sans-serif !important;font-weight: bold;">Đăng ký chuyển đổi số điện thoại nhận SMS OTP từ 11 số sang 10 số</a></li> -->
