--- a/views/partials/Save.ejs
+++ b/views/partials/Save.ejs
@@ -6,13 +6,14 @@
 <br />
 <hr />
 <h1 style="text-align: center;">Gửi tiết kiệm</h1>
-
-<h5>Tên chủ tài khoản: <input type="text" class="form-control" id="accountNumber" name="accountNumber"
-    value="<%= currentUser.displayName %>" disabled>  </h5>
-<h5>Email: <input type="text" class="form-control" id="accountNumber" name="accountNumber"
-    value="<%= currentUser.email %>" disabled>  </h5>
-<h5>Số dư hiện tại: <input type="text" class="form-control" id="accountNumber" name="accountNumber"
-    value="<%= bank.defaultMoney %> VNĐ" disabled>  </h5>
+<div style="width: 54%;margin-left: 1.5%;">
+    <h5 style="margin-top: 20px;">Tên chủ tài khoản: <input style="margin-top: 10px;" type="text" class="form-control" id="accountNumber" name="accountNumber"
+        value="<%= currentUser.displayName %>" disabled>  </h5>
+    <h5 style="margin-top: 20px;">Email: <input style="margin-top: 10px;" type="text" class="form-control" id="accountNumber" name="accountNumber"
+        value="<%= currentUser.email %>" disabled>  </h5>
+    <h5 style="margin-top: 20px;">Số dư hiện tại: <input style="margin-top: 10px;" type="text" class="form-control" id="accountNumber" name="accountNumber"
+        value="<%= bank.defaultMoney %> VNĐ" disabled>  </h5>
+</div>
     
 <hr>
 <br />
