--- a/views/partials/accountNumber.ejs
+++ b/views/partials/accountNumber.ejs
@@ -14,11 +14,11 @@
 
         <div>
 
-            <h5>Số tài khoản: <input type="text" class="form-control" id="accountNumber" name="accountNumber"
+            <h5>Số tài khoản: <input style="margin-top:10px;" type="text" class="form-control" id="accountNumber" name="accountNumber"
                     value="<%= bank.accountNumber %>" disabled> </h5>
             <hr>
             <h5>Tài khoản mặc định: </h5>
-            <div class="input-group mb-3">
+            <div style="margin-top:10px;" class="input-group mb-3">
                 <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" id="accountNumber" name="accountNumber" value="<%= bank.defaultMoney %>" disabled>
                 <div class="input-group-prepend">
                   <span class="input-group-text">VNĐ</span>
