--- a/views/manage/templateleft.ejs
+++ b/views/manage/templateleft.ejs
@@ -21,9 +21,8 @@
               <ul class="flex-column pl-2 nav">
                 <li class="nav-item" style="margin-left: 30px; "><a class="nav-link py-0" href="/adminAccount"><span>Tài
                       Khoản Nhân Viên</span></a></li>
-                <!-- <li class="nav-item">
-                  <a class="nav-link py-0" style="margin-top: 8px; margin-left: 30px;" href="card"><span>Nạp Tiền Tài
-                      Khoản</span></a> -->
+                <li class="nav-item">
+                  <a class="nav-link py-0" style="margin-top: 8px; margin-left: 30px;" href="/confirmCMND"><span>Cá Nhân</span></a>
                 </li>
               </ul>
             </div>
