--- a/views/partials/templateheader.ejs
+++ b/views/partials/templateheader.ejs
@@ -39,7 +39,7 @@
                     <h5 class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Tài khoản ▾</h5>
                     <div class="dropdown-menu">
                       <a class="dropdown-item" href="/accountNumber">Thông tin tài khoản</a>
-                   
+                      <a class="dropdown-item" href="/confirmCMND">Cá Nhân</a>
                       <a class="dropdown-item" href="changepassword">Bảo mật</a>
                     </div>
                     </div>
