--- a/views/manage/guestAccount.ejs
+++ b/views/manage/guestAccount.ejs
@@ -12,32 +12,21 @@
   <h1 style="text-align: center;">Quản Lý Tài Khoản Khách Hàng</h1>
   <hr>
   </br>
-  <table class="table table-striped table-dark">
-      <thead>
-        <tr>
-          <th scope="col">Email</th>
-          <th scope="col">Số Tài Khoản</th>
-          <th scope="col">Họ và Tên</th>
-          <th scope="col">Thao tác</th>
-        </tr>
-      </thead>
-      <tbody>
+    <div class="container">
+      <ul class="list-group" >
           <% banks.forEach(function(bank){ %>
-        <tr>
-          <th scope="col"><%= bank.user.email %> </th>
-          <th scope="col"><%= bank.accountNumber %> </th>
-          <th scope="col"><%= bank.user.displayName %></th>
-          <th scope="col">
-          <% if(bank.user.block === false){ %> 
-          <a href="guestAccount/<%=bank.user.email%>/block">Khóa account</a>
-          <% } else { %>
-          <a href="guestAccount/<%=bank.user.email%>/unblock">Mở account</a>
-          <% }%>
-          </th>
-        </tr>
-        <% }); %>
-      </tbody>
-    </table>
+              <li class="list-group-item active">Email: <%= bank.user.email %> </li>
+              <li class="list-group-item">Số tài khoản: <%= bank.accountNumber %></li>
+              <li class="list-group-item">Họ và tên: <%= bank.user.displayName %></li>
+              <li class="list-group-item">Thao tác: <% if(bank.user.block === false){ %> 
+                <a href="guestAccount/<%=bank.user.email%>/block">Khóa account</a>
+                <% } else { %>
+                <a href="guestAccount/<%=bank.user.email%>/unblock">Mở account</a>
+                <% }%></li>
+              <br>
+          <% }); %>
+      </ul>  
+  </div>
   </div>
   </div>
 </body>
