--- a/views/manage/recharge.ejs
+++ b/views/manage/recharge.ejs
@@ -18,28 +18,16 @@
     </form>
 
 <br>
-      <table class="table table-striped table-dark">
-          <thead>
-            <tr>
-              <th scope="col">Email</th>
-              <th scope="col">Họ và Tên</th>
-              <th scope="col">Số tài khoản</th>
-              <th scope="col">CMND</th>
-              <th scope="col">Thao tác</th>
-            </tr>
-          </thead>
-          <tbody>
+        <div class="container">
+          <ul class="list-group" >
               <% banks.forEach(function(bank){ %>
-            <tr>
-              <th scope="col"><%= bank.user.email %> </th>
-              <th scope="col"><%= bank.user.displayName %></th>
-              <th scope="col"><%= bank.accountNumber %></th>
-              <th scope="col"><%= bank.user.CMND %></th>
-              <th><a role="button" href="/card/<%= bank.accountNumber %>">Nạp tiền</a></th>  
-            </tr>
-            <% }); %>
-          </tbody>
-        </table>
+                  <li class="list-group-item active">Email: <%= bank.user.email %> </li>
+                  <li class="list-group-item">Họ và tên: <%= bank.user.displayName %></li>
+                  <li class="list-group-item">Số tài khoản: <%= bank.accountNumber %></li>
+                  <li class="list-group-item" style="margin-bottom: 2vw;"><a role="button" href="/card/<%= bank.accountNumber %>">Nạp tiền</a>
+              <% }); %>
+          </ul>  
+      </div>
       </div>
 </body>
    
